# dotfiles

./: .bashrc  .gitconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .vimrc  .zsh_aliases  .zshrc  Dockerfile  README.md  configure.sh  flake.nix  install.sh  justfile  ssh_config
.github/workflows/: build.yml  nix-check.yml  precommit.yml  test-install.yml
circle-example/: Cargo.toml
circle-example/src/: main.rs
dotfiles/: .gitignore  Cargo.toml  Dockerfile.ubuntu  debug.rs  rust-toolchain.toml
dotfiles/circle-example/src/: main.rs
dotfiles/dependencies/: Cargo.toml
dotfiles/dependencies/src/: command.rs  lib.rs
dotfiles/dependencies/src/assets/: .p10k.zsh  .zshrc-base
dotfiles/dependencies/src/dependencies/: apt_transport_https.rs  authorized_keys.rs  authorized_keys_updater.rs  bat.rs  ca_certificates.rs  curl.rs  docker.rs  ed25519key.rs  firefox.rs  gcc.rs  git.rs  gnupg.rs  mod.rs  nodejs.rs  nvm.rs  ohmyzsh.rs  package_cache_refresh.rs  pip3.rs  powerlevel10k.rs  python3.rs  python3_dev.rs  rust.rs  setuptools.rs  thefuck.rs  tmux.rs  tokei.rs  vscode.rs  yarn.rs  zsh.rs  zsh_aliases.rs  zsh_autosuggestions.rs  zsh_syntax_highlighting.rs  zshrc.rs
dotfiles/singleton-derive/: Cargo.toml
dotfiles/singleton-derive/src/: lib.rs
dotfiles/singleton-derive/tests/: test.rs
dotfiles/src/: app.rs  handler.rs  main.rs  ui.rs
dotfiles/src/assets/: .zsh_aliases
dotfiles/src/dependencies/: docker.rs  mod.rs  zsh.rs
dotfiles/tree/: Cargo.toml
dotfiles/tree/src/: lib.rs
nix/: nixos-module.nix
scripts/: do_load_env  functions.sh  sync-ssh-keys.sh  update-all
scripts/partly/: check-downstream
zsh/: .zsh_aliases  .zshrc
