[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
home = "0.5.5"
lazy_static = "1.4.0"
log = "0.4.19"
pretty_env_logger = "0.5.0"
serde = { version = "1.0.164", features = ["alloc", "derive"] }
serde_yaml = "0.9.21"
sudo = "0.6.0"
sysinfo = { version = "0.29.2", features = ["serde"] }
tokei = "12.1.2"
tokio = { version = "1.28.2", features = ["full"] }
whoami = "1.4.0"
