[package]
name = "singleton-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.28"
syn = { version = "2.0.18", features = ["full"] }
proc-macro2 = "1.0.29"

[lib]
proc-macro = true

[dev-dependencies]
singleton-derive = { path = "." }

# integration tests
[[test]]
name = "singleton-derive"
path = "tests/test.rs"
